unpackaged/main/default/objects/User/fields/Add_Google_Doc_Task__c.field-meta.xml
<CustomField>
    <fullName>Add_Google_Doc_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Google Doc Task</label>
    <type>Checkbox</type>
</CustomField>