unpackaged/main/default/objects/User/fields/Add_Photos_Task__c.field-meta.xml
<CustomField>
    <fullName>Add_Photos_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Photos Task</label>
    <type>Checkbox</type>
</CustomField>