unpackaged/main/default/objects/User/fields/Agent_Subdomain_Pod__c.field-meta.xml
<CustomField>
    <fullName>Agent_Subdomain_Pod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Subdomain Pod</label>
    <type>Checkbox</type>
</CustomField>