unpackaged/main/default/objects/User/fields/AI_Lead_Nurture__c.field-meta.xml
<CustomField>
    <fullName>AI_Lead_Nurture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Lead Nurture</label>
    <type>Checkbox</type>
</CustomField>