unpackaged/main/default/objects/User/fields/Analytics_Queue__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics Queue</label>
    <type>Checkbox</type>
</CustomField>