unpackaged/main/default/objects/User/fields/Approvals_VA__c.field-meta.xml
<CustomField>
    <fullName>Approvals_VA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approvals VA</label>
    <type>Checkbox</type>
</CustomField>