unpackaged/main/default/objects/User/fields/Approve_QA_Redirects_Taks__c.field-meta.xml
<CustomField>
    <fullName>Approve_QA_Redirects_Taks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve QA Redirects Taks</label>
    <type>Checkbox</type>
</CustomField>