unpackaged/main/default/objects/User/fields/Assigned_POD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_POD__c</fullName>
    <label>Assigned POD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POD 1</fullName>
            </value>
            <value>
                <fullName>POD 2</fullName>
            </value>
            <value>
                <fullName>POD 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>