unpackaged/main/default/objects/User/fields/Bi_Weekly_GBP_Posts__c.field-meta.xml
<CustomField>
    <fullName>Bi_Weekly_GBP_Posts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bi-Weekly GBP Posts</label>
    <type>Checkbox</type>
</CustomField>