unpackaged/main/default/objects/User/fields/Billing_Collections_User__c.field-meta.xml
<CustomField>
    <fullName>Billing_Collections_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Collections User</label>
    <type>Checkbox</type>
</CustomField>