unpackaged/main/default/objects/User/fields/Blogs_Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Blogs_Freelancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blogs Freelancer</label>
    <type>Checkbox</type>
</CustomField>