unpackaged/main/default/objects/User/fields/Book_New_Sale_in_Quickbooks__c.field-meta.xml
<CustomField>
    <fullName>Book_New_Sale_in_Quickbooks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assignation in order to create the &quot;Book New Sale in Quickbooks&quot; task</description>
    <label>Book New Sale in Quickbooks</label>
    <type>Checkbox</type>
</CustomField>