unpackaged/main/default/objects/User/fields/Brand_Custom__c.field-meta.xml
<CustomField>
    <fullName>Brand_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand+ - Custom</label>
    <type>Checkbox</type>
</CustomField>