unpackaged/main/default/objects/User/fields/Brand_Pro__c.field-meta.xml
<CustomField>
    <fullName>Brand_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand+ - Pro</label>
    <type>Checkbox</type>
</CustomField>