unpackaged/main/default/objects/User/fields/Brokerage_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage/Enterprise?</label>
    <type>Checkbox</type>
</CustomField>