unpackaged/main/default/objects/User/fields/Build_Site_Pod_Formula__c.field-meta.xml
<CustomField>
    <fullName>Build_Site_Pod_Formula__c</fullName>
    <formula>IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 1&quot;), &quot;Pod 1; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 2&quot;), &quot;Pod 2; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 3&quot;), &quot;Pod 3; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 4&quot;), &quot;Pod 4; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 5&quot;), &quot;Pod 5; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 6&quot;), &quot;Pod 6; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 7&quot;), &quot;Pod 7; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 8&quot;), &quot;Pod 8; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c  , &quot;Pod 9&quot;), &quot;Pod 9; &quot;,null ) &amp;
IF ( INCLUDES ( Build_Site_Task_Assignment__c, &quot;Pod 10&quot;), &quot;Pod 10; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Site Pod Formula</label>
    <type>Text</type>
</CustomField>