unpackaged/main/default/objects/User/fields/Build_Site_Task_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Build_Site_Task_Assignment__c</fullName>
    <label>Build Site Task Assignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pod 1</fullName>
            </value>
            <value>
                <fullName>Pod 2</fullName>
            </value>
            <value>
                <fullName>Pod 3</fullName>
            </value>
            <value>
                <fullName>Pod 4</fullName>
            </value>
            <value>
                <fullName>Pod 5</fullName>
            </value>
            <value>
                <fullName>Pod 6</fullName>
            </value>
            <value>
                <fullName>Pod 7</fullName>
            </value>
            <value>
                <fullName>Pod 8</fullName>
            </value>
            <value>
                <fullName>Pod 9</fullName>
            </value>
            <value>
                <fullName>Pod 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>