unpackaged/main/default/objects/User/fields/Case_Advanced_Edits_and_Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Advanced_Edits_and_Site_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case - Advanced Edits and Site Status</label>
    <type>Checkbox</type>
</CustomField>