unpackaged/main/default/objects/User/fields/Case_Basic_Edits__c.field-meta.xml
<CustomField>
    <fullName>Case_Basic_Edits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case - Basic Edits</label>
    <type>Checkbox</type>
</CustomField>