unpackaged/main/default/objects/User/fields/Case_IDX__c.field-meta.xml
<CustomField>
    <fullName>Case_IDX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case - IDX</label>
    <type>Checkbox</type>
</CustomField>