unpackaged/main/default/objects/User/fields/Case_NPS_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Case_NPS_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case - NPS / Outreach</label>
    <type>Checkbox</type>
</CustomField>