unpackaged/main/default/objects/User/fields/Case_Triage__c.field-meta.xml
<CustomField>
    <fullName>Case_Triage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case - Triage</label>
    <type>Checkbox</type>
</CustomField>