unpackaged/main/default/objects/User/fields/Citations_Reputation_Management__c.field-meta.xml
<CustomField>
    <fullName>Citations_Reputation_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citations &amp; Reputation Management</label>
    <type>Checkbox</type>
</CustomField>