unpackaged/main/default/objects/User/fields/Competitive_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitive Analysis</label>
    <type>Checkbox</type>
</CustomField>