unpackaged/main/default/objects/User/fields/Content_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Content_Specialist__c</fullName>
    <label>Content Specialist</label>
    <relationshipName>Content_Specialist</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>