unpackaged/main/default/objects/User/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neighborhood Guide</fullName>
            </value>
            <value>
                <fullName>Agent Bios</fullName>
            </value>
            <value>
                <fullName>Misc. Copy</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>