unpackaged/main/default/objects/User/fields/Content_Type_Agent_Bios__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_Agent_Bios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Type - Agent Bios</label>
    <type>Checkbox</type>
</CustomField>