unpackaged/main/default/objects/User/fields/Content_Type_Blogs__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_Blogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Type - Blogs</label>
    <type>Checkbox</type>
</CustomField>