unpackaged/main/default/objects/User/fields/Content_Type_Community_Guide__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_Community_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Type - Community Guide</label>
    <type>Checkbox</type>
</CustomField>