unpackaged/main/default/objects/User/fields/Content_Type_Misc_Copy__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_Misc_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Type - Misc. Copy</label>
    <type>Checkbox</type>
</CustomField>