unpackaged/main/default/objects/User/fields/Content_VA__c.field-meta.xml
<CustomField>
    <fullName>Content_VA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content VA</label>
    <type>Checkbox</type>
</CustomField>