unpackaged/main/default/objects/User/fields/Copilot__c.field-meta.xml
<CustomField>
    <fullName>Copilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copilot</label>
    <type>Checkbox</type>
</CustomField>