unpackaged/main/default/objects/User/fields/Copywriting_Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Copywriting_Freelancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copywriting Freelancer</label>
    <type>Checkbox</type>
</CustomField>