unpackaged/main/default/objects/User/fields/Creative_Brief__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creative Brief</label>
    <type>Checkbox</type>
</CustomField>