unpackaged/main/default/objects/User/fields/Deck_Creator__c.field-meta.xml
<CustomField>
    <fullName>Deck_Creator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deck Creator</label>
    <type>Checkbox</type>
</CustomField>