unpackaged/main/default/objects/User/fields/Design_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Design_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Design refresh round robin assignment 00123798</description>
    <label>Design Refresh</label>
    <type>Checkbox</type>
</CustomField>