unpackaged/main/default/objects/User/fields/Draft_Blog_Task__c.field-meta.xml
<CustomField>
    <fullName>Draft_Blog_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Blog Task</label>
    <type>Checkbox</type>
</CustomField>