unpackaged/main/default/objects/User/fields/Enroll_Client_to_Stripe__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Client_to_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assignation in order to create the &quot;Enroll Client to Stripe&quot; task</description>
    <label>Enroll Client to Stripe</label>
    <type>Checkbox</type>
</CustomField>