unpackaged/main/default/objects/User/fields/Enterprise_Cases__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Cases</label>
    <type>Checkbox</type>
</CustomField>