unpackaged/main/default/objects/User/fields/Enterprise_Custom__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise - Custom</label>
    <type>Checkbox</type>
</CustomField>