unpackaged/main/default/objects/User/fields/Enterprise_Pro__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise - Pro</label>
    <type>Checkbox</type>
</CustomField>