unpackaged/main/default/objects/User/fields/Final_QA_Task__c.field-meta.xml
<CustomField>
    <fullName>Final_QA_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final QA Task</label>
    <type>Checkbox</type>
</CustomField>