unpackaged/main/default/objects/User/fields/Freelancer_Agent_Bios__c.field-meta.xml
<CustomField>
    <fullName>Freelancer_Agent_Bios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freelancer - Agent Bios</label>
    <type>Checkbox</type>
</CustomField>