unpackaged/main/default/objects/User/fields/Freelancer_Copywriting__c.field-meta.xml
<CustomField>
    <fullName>Freelancer_Copywriting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freelancer - Copywriting</label>
    <type>Checkbox</type>
</CustomField>