unpackaged/main/default/objects/User/fields/GBP_Set_up__c.field-meta.xml
<CustomField>
    <fullName>GBP_Set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP Set up</label>
    <type>Checkbox</type>
</CustomField>