unpackaged/main/default/objects/User/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth+</label>
    <type>Checkbox</type>
</CustomField>