unpackaged/main/default/objects/User/fields/Growth_Custom__c.field-meta.xml
<CustomField>
    <fullName>Growth_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth+ - Custom</label>
    <type>Checkbox</type>
</CustomField>