unpackaged/main/default/objects/User/fields/Growth_Pro__c.field-meta.xml
<CustomField>
    <fullName>Growth_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth+ - Pro</label>
    <type>Checkbox</type>
</CustomField>