unpackaged/main/default/objects/User/fields/GTM_Implementation_task__c.field-meta.xml
<CustomField>
    <fullName>GTM_Implementation_task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GTM Implementation task</label>
    <type>Checkbox</type>
</CustomField>