unpackaged/main/default/objects/User/fields/IAO__c.field-meta.xml
<CustomField>
    <fullName>IAO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAO</label>
    <type>Checkbox</type>
</CustomField>