unpackaged/main/default/objects/User/fields/IDX_Implementation__c.field-meta.xml
<CustomField>
    <fullName>IDX_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDX Implementation</label>
    <type>Checkbox</type>
</CustomField>