unpackaged/main/default/objects/User/fields/IDX_Mod_task__c.field-meta.xml
<CustomField>
    <fullName>IDX_Mod_task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDX Mod task</label>
    <type>Checkbox</type>
</CustomField>