unpackaged/main/default/objects/User/fields/Landing_Pages__c.field-meta.xml
<CustomField>
    <fullName>Landing_Pages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landing Pages</label>
    <type>Checkbox</type>
</CustomField>