unpackaged/main/default/objects/User/fields/Last_Account_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Assigned__c</fullName>
    <label>Last Account Assigned</label>
    <type>DateTime</type>
</CustomField>