unpackaged/main/default/objects/User/fields/Last_Case_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Assigned__c</fullName>
    <label>Last Case Assigned</label>
    <type>DateTime</type>
</CustomField>