unpackaged/main/default/objects/User/fields/Last_Design_Refresh_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Design_Refresh_Assigned__c</fullName>
    <description>Case # 00123798</description>
    <label>Last Design Refresh Assigned</label>
    <type>DateTime</type>
</CustomField>