unpackaged/main/default/objects/User/fields/Last_Niche_Task_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Niche_Task_Assigned__c</fullName>
    <label>Last Niche Task Assigned</label>
    <type>DateTime</type>
</CustomField>