unpackaged/main/default/objects/User/fields/Last_SEO_task__c.field-meta.xml
<CustomField>
    <fullName>Last_SEO_task__c</fullName>
    <label>Last SEO task</label>
    <type>DateTime</type>
</CustomField>