unpackaged/main/default/objects/User/fields/Last_Service_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Assigned__c</fullName>
    <label>Last Service Assigned</label>
    <type>DateTime</type>
</CustomField>