unpackaged/main/default/objects/User/fields/Last_SS_assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_SS_assigned__c</fullName>
    <label>Last SS assigned</label>
    <type>DateTime</type>
</CustomField>