unpackaged/main/default/objects/User/fields/Last_task_assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_task_assigned__c</fullName>
    <label>Last task assigned</label>
    <type>DateTime</type>
</CustomField>