unpackaged/main/default/objects/User/fields/Launch__c.field-meta.xml
<CustomField>
    <fullName>Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch+</label>
    <type>Checkbox</type>
</CustomField>