unpackaged/main/default/objects/User/fields/Launch_Custom__c.field-meta.xml
<CustomField>
    <fullName>Launch_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch+ - Custom</label>
    <type>Checkbox</type>
</CustomField>