unpackaged/main/default/objects/User/fields/Launch_Pro__c.field-meta.xml
<CustomField>
    <fullName>Launch_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch+ - Pro</label>
    <type>Checkbox</type>
</CustomField>