unpackaged/main/default/objects/User/fields/Leads_Pro_Pro__c.field-meta.xml
<CustomField>
    <fullName>Leads_Pro_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leads Pro - Pro</label>
    <type>Checkbox</type>
</CustomField>