unpackaged/main/default/objects/User/fields/Link_Building__c.field-meta.xml
<CustomField>
    <fullName>Link_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Building</label>
    <type>Checkbox</type>
</CustomField>