unpackaged/main/default/objects/User/fields/Logo_and_Property_Placeholder_task__c.field-meta.xml
<CustomField>
    <fullName>Logo_and_Property_Placeholder_task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logo and Property Placeholder task</label>
    <type>Checkbox</type>
</CustomField>