unpackaged/main/default/objects/User/fields/Mid_Market_Custom__c.field-meta.xml
<CustomField>
    <fullName>Mid_Market_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mid Market Custom</label>
    <type>Checkbox</type>
</CustomField>