unpackaged/main/default/objects/User/fields/Mid_Market_Pro__c.field-meta.xml
<CustomField>
    <fullName>Mid_Market_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mid Market Pro</label>
    <type>Checkbox</type>
</CustomField>