unpackaged/main/default/objects/User/fields/Migration_Audit_QA_Task__c.field-meta.xml
<CustomField>
    <fullName>Migration_Audit_QA_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Audit QA Task</label>
    <type>Checkbox</type>
</CustomField>