unpackaged/main/default/objects/User/fields/MLS_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>MLS_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLS Coordinator</label>
    <type>Checkbox</type>
</CustomField>