unpackaged/main/default/objects/User/fields/MLS_High_Compliance__c.field-meta.xml
<CustomField>
    <fullName>MLS_High_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLS High Compliance</label>
    <type>Checkbox</type>
</CustomField>