unpackaged/main/default/objects/User/fields/Monthly_GBP_Posts__c.field-meta.xml
<CustomField>
    <fullName>Monthly_GBP_Posts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly GBP Posts</label>
    <type>Checkbox</type>
</CustomField>