unpackaged/main/default/objects/User/fields/NCS_Task__c.field-meta.xml
<CustomField>
    <fullName>NCS_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCS Task</label>
    <type>Checkbox</type>
</CustomField>