unpackaged/main/default/objects/User/fields/Niche_Task__c.field-meta.xml
<CustomField>
    <fullName>Niche_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niche Task</label>
    <type>Checkbox</type>
</CustomField>