unpackaged/main/default/objects/User/fields/Paid_Media_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media_Specialist__c</fullName>
    <label>Paid Media Specialist</label>
    <relationshipName>PaidMediaSpecialist</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>