unpackaged/main/default/objects/User/fields/PET_Advanced__c.field-meta.xml
<CustomField>
    <fullName>PET_Advanced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PET Advanced</label>
    <type>Checkbox</type>
</CustomField>