unpackaged/main/default/objects/User/fields/PET_Pro__c.field-meta.xml
<CustomField>
    <fullName>PET_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PET Pro</label>
    <type>Checkbox</type>
</CustomField>