unpackaged/main/default/objects/User/fields/PFT_Pod__c.field-meta.xml
<CustomField>
    <fullName>PFT_Pod__c</fullName>
    <label>PFT Pod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pod 1</fullName>
            </value>
            <value>
                <fullName>Pod 2</fullName>
            </value>
            <value>
                <fullName>Pod 3</fullName>
            </value>
            <value>
                <fullName>Pod 4</fullName>
            </value>
            <value>
                <fullName>Pod 5</fullName>
            </value>
            <value>
                <fullName>Pod 6</fullName>
            </value>
            <value>
                <fullName>Pod 7</fullName>
            </value>
            <value>
                <fullName>Pod 8</fullName>
            </value>
            <value>
                <fullName>Pod 9</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Pod 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>