unpackaged/main/default/objects/User/fields/PM_VA_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>PM_VA_Team_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM VA Team Lead</label>
    <type>Checkbox</type>
</CustomField>