unpackaged/main/default/objects/User/fields/Post_Blog_Task__c.field-meta.xml
<CustomField>
    <fullName>Post_Blog_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Blog Task</label>
    <type>Checkbox</type>
</CustomField>