unpackaged/main/default/objects/User/fields/Posting_VA__c.field-meta.xml
<CustomField>
    <fullName>Posting_VA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posting VA</label>
    <type>Checkbox</type>
</CustomField>