unpackaged/main/default/objects/User/fields/Premium_Custom__c.field-meta.xml
<CustomField>
    <fullName>Premium_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium+ - Custom</label>
    <type>Checkbox</type>
</CustomField>