unpackaged/main/default/objects/User/fields/Premium_Pro__c.field-meta.xml
<CustomField>
    <fullName>Premium_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium+ - Pro</label>
    <type>Checkbox</type>
</CustomField>