unpackaged/main/default/objects/User/fields/Property_Crawl_Task__c.field-meta.xml
<CustomField>
    <fullName>Property_Crawl_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Property Crawl task assignment</description>
    <label>Property Crawl Task</label>
    <type>Checkbox</type>
</CustomField>