unpackaged/main/default/objects/User/fields/Property_website_task_user__c.field-meta.xml
<CustomField>
    <fullName>Property_website_task_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property website task user</label>
    <type>Checkbox</type>
</CustomField>