unpackaged/main/default/objects/User/fields/QA_Assistants__c.field-meta.xml
<CustomField>
    <fullName>QA_Assistants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Assistants</label>
    <type>Checkbox</type>
</CustomField>