unpackaged/main/default/objects/User/fields/QA_Redirects_Task__c.field-meta.xml
<CustomField>
    <fullName>QA_Redirects_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Redirects Task</label>
    <type>Checkbox</type>
</CustomField>