unpackaged/main/default/objects/User/fields/Quarterly_Goal__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Goal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For CSM Managers to calculate real-time % to goal for EOQ performance reviews.</description>
    <label>Quarterly Goal</label>
    <type>Checkbox</type>
</CustomField>