unpackaged/main/default/objects/User/fields/Reserved_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Limit__c</fullName>
    <label>Reserved Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>