unpackaged/main/default/objects/User/fields/Reserved_Records__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reserved Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>