unpackaged/main/default/objects/User/fields/Retention_All_CX__c.field-meta.xml
<CustomField>
    <fullName>Retention_All_CX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this user should be part of the round robin case assignment for Brand (+) and Launch (+) retention cases only</description>
    <inlineHelpText>Check if this user should be part of the round robin case assignment for Brand (+) and Launch (+) retention cases only</inlineHelpText>
    <label>Retention - All CX</label>
    <type>Checkbox</type>
</CustomField>