unpackaged/main/default/objects/User/fields/Retention_Cases__c.field-meta.xml
<CustomField>
    <fullName>Retention_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retention Cases</label>
    <type>Checkbox</type>
</CustomField>