unpackaged/main/default/objects/User/fields/Retention_CXM_Only__c.field-meta.xml
<CustomField>
    <fullName>Retention_CXM_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this user should be part of the round robin case assignment for SEO Pro, Leads Pro, Premium (+), Growth (+) retention cases</description>
    <inlineHelpText>Check if this user should be part of the round robin case assignment for SEO Pro, Leads Pro, Premium (+), Growth (+) retention cases</inlineHelpText>
    <label>Retention - CXM Only</label>
    <type>Checkbox</type>
</CustomField>