unpackaged/main/default/objects/User/fields/Retention_Senior_CXM__c.field-meta.xml
<CustomField>
    <fullName>Retention_Senior_CXM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this user should be part of the round robin case assignment for VIP or High Priority retention cases</description>
    <inlineHelpText>Check if this user should be part of the round robin case assignment for VIP or High Priority retention cases</inlineHelpText>
    <label>Retention - Senior CXM</label>
    <type>Checkbox</type>
</CustomField>