unpackaged/main/default/objects/User/fields/Salesforce_Role__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Role__c</fullName>
    <label>Salesforce Role</label>
    <length>150</length>
    <type>Text</type>
</CustomField>