unpackaged/main/default/objects/User/fields/SEO_Content_Migration__c.field-meta.xml
<CustomField>
    <fullName>SEO_Content_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Content Migration</label>
    <type>Checkbox</type>
</CustomField>