unpackaged/main/default/objects/User/fields/SEO_FQA__c.field-meta.xml
<CustomField>
    <fullName>SEO_FQA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO FQA</label>
    <type>Checkbox</type>
</CustomField>