unpackaged/main/default/objects/User/fields/SEO_Marketing_VA__c.field-meta.xml
<CustomField>
    <fullName>SEO_Marketing_VA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO Marketing VA</label>
    <type>Checkbox</type>
</CustomField>